* Added support for setting service name and version for a transaction via the public api - {pull}2451[#2451]
* Added support for en-/disabling each public annotation on each own - {pull}2472[#2472]
* Added support for compressing spans - {pull}2477[#2477]
* Added microsecond durations with `us` as unit - {pull}2496[#2496]
* Added support for dropping fast exit spans - {pull}2491[#2491]

[float]
===== Performance improvements
* Proxy classes are excluded from instrumentation in more cases - {pull}2474[#2474]
* Only time type/method matching if the debug logging is enabled as the results are only used when debug logging is enabled - {pull}2471[#2471]

[float]
===== Bug fixes
* Fix cross-plugin dependencies triggering NoClassDefFound - {pull}2509[#2509]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.29.0]]
==== 1.29.0 - 2022/02/09

[float]
===== Breaking changes
* Changes in service name auto-discovery of jar files (see Features section)

[float]
===== Features
* Exceptions that are logged using the fatal log level are now captured (log4j2 only) - {pull}2377[#2377]
* Replaced `authorization` in the default value of `sanitize_field_names` with `*auth*` - {pull}2326[#2326]
* Unsampled transactions are dropped and not sent to the APM-Server if the APM-Server version is 8.0+ - {pull}2329[#2329]
* Adding agent logging capabilities to our SDK, making it available for external plugins - {pull}2390[#2390]
* Service name auto-discovery improvements
** For applications deployed to application servers (`war` files) and standalone jars that are started with `java -jar`,
   the agent now discovers the `META-INF/MANIFEST.MF` file.
** If the manifest contains the `Implementation-Title` attribute, it is used as the default service name - {pull}1921[#1921], {pull}2434[#2434] +
  *Note*: this may change your service names if you relied on the auto-discovery that uses the name of the jar file.