@@ -34,6 +34,7 @@ endif::[]
 * Added support for compressing spans - {pull}2477[#2477]
 * Added microsecond durations with `us` as unit - {pull}2496[#2496]
 * Added support for dropping fast exit spans - {pull}2491[#2491]
+* Added support for collecting statistics about dropped exit spans - {pull}2505[#2505]
 
 [float]
 ===== Performance improvements
